zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__sixel_with_image_scrolling_decsdm.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 2316
expression: "format!(\"{:?}\", grid)"
---
00 (C): SixelSixelSix
01 (C): SixelSixelSix
02 (C): SixelSixelSix
03 (C): SixelSixelSix
04 (C): SixelSixelSix
05 (C): line 6
06 (C): line 7
07 (C): line 8
08 (C): line 9
09 (C): line 10
10 (C):         
11 (C): 
12 (C): 
13 (C): 
14 (C): 
15 (C): 
16 (C): 
17 (C): 
18 (C): 
19 (C): 
20 (C): 
21 (C): 
22 (C): 
23 (C): 
24 (C): 
25 (C): 
26 (C): 
27 (C): 
28 (C): 
29 (C): 

