zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__table_ui_component.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 2896
expression: "format!(\"{:?}\", grid)"
---
00 (C): title1           title2            title3           title4                 title5          
01 (C): ──────────────────────────────────────────────────────────────────────────────────────────
02 (C): 1lksdjflksdjf    lkjdsflksjdf      lkjsdlkfjsfd     lkjsdlkjfd             lkjdslkjsdf     
03 (C): 2lksdjflksdjf    lkjdsflksjdf      lkj😳😳sdlkfjsfd lkjsdlkjfd             lkjdslkjsdf     
04 (C): 3lksdjflksdjf    lkjdsflksjdf      lkjsd😳lkfjsfd   lkjsdlkjfd             lkjdslkjsdf     
05 (C): 4lksdjflks222djf lk😳222jdsflksjdf lk222jsdlkfjsfd  lkwwwjsdlkjfd          lkjdslkjsdf     
06 (C): 5lksdjflksdjf    lkjdsflksjdf      lkjsdlkfjsfd     lksdjflksjfdlkjsdlkjfd lkjdrrrrslkjsdf 
07 (C): 6lksdjflk😳sdjf  l😳kjdsflksjdf    lkjsdlkfjsfd     lkjsdlkjfd             lwwkwkjdslkjsdf 
08 (C): 
09 (C): 
10 (C): 
11 (C): 
12 (C): 
13 (C): 
14 (C): 
15 (C): 
16 (C): 
17 (C): 
18 (C): 
19 (C): 
20 (C): 
21 (C): 
22 (C): 
23 (C): 
24 (C): 
25 (C): 
26 (C): 
27 (C): 
28 (C): 
29 (C): 
30 (C): 
31 (C): 
32 (C): 
33 (C): 
34 (C): 
35 (C): 
36 (C): 
37 (C): 
38 (C): 
39 (C): 
40 (C): 

