zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__terminal_reports.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 1016
expression: "format!(\"{:?}\", grid.pending_messages_to_pty)"
---
[[27, 91, 63, 54, 50, 59, 52, 59, 53, 50, 99], [27, 91, 56, 59, 53, 49, 59, 57, 55, 116], [27, 91, 63, 54, 99], [27, 91, 48, 110], [27, 91, 49, 59, 49, 82]]
