zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__top_and_quit.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): Tasks: 158 total,   1 running, 157 sleeping,   0 stopped,   0 zombie                                                                                                                                                                       
01 (C): %Cpu(s): 24.2 us,  1.6 sy,  0.0 ni, 74.2 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st                                                                                                                                                            
02 (C): MiB Mem :  15715.1 total,   7001.4 free,   2163.7 used,   6549.9 buff/cache                                                                                                                                                                
03 (C): MiB Swap:  16384.0 total,  16384.0 free,      0.0 used.  12809.8 avail Mem                                                                                                                                                                 
04 (C):                                                                                                                                                                                                                                            
05 (C):     PID USER      PR  NI    VIRT    RES    SHR S  %CPU  %MEM     TIME+ COMMAND                                                                                                                                                             
06 (C):   15838 aram      20   0 7275240  56912  18964 S  73.3   0.4   0:17.79 zellij                                                                                                                                                              
07 (C):   12653 aram      20   0   39032  22164  14372 S  20.0   0.1   0:00.63 urxvt                                                                                                                                                               
08 (C):    1477 aram      20   0 3178660 301992 203236 S   6.7   1.9   3:49.82 Web Content                                                                                                                                                         
09 (C):       1 root      20   0  175360  11532   8596 S   0.0   0.1   0:05.90 systemd                                                                                                                                                             
10 (C):       2 root      20   0       0      0      0 S   0.0   0.0   0:00.01 kthreadd                                                                                                                                                            
11 (C):       3 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 rcu_gp                                                                                                                                                              
12 (C):       4 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 rcu_par_gp                                                                                                                                                          
13 (C):       6 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kworker/0:0H-kblockd                                                                                                                                                
14 (C):       8 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 mm_percpu_wq                                                                                                                                                        
15 (C):       9 root      20   0       0      0      0 S   0.0   0.0   0:01.24 ksoftirqd/0                                                                                                                                                         
16 (C):      10 root      -2   0       0      0      0 S   0.0   0.0   0:00.00 rcuc/0                                                                                                                                                              
17 (C):      11 root      -2   0       0      0      0 I   0.0   0.0   0:06.12 rcu_preempt                                                                                                                                                         
18 (C):      12 root      -2   0       0      0      0 S   0.0   0.0   0:00.00 rcub/0                                                                                                                                                              
19 (C):      13 root      rt   0       0      0      0 S   0.0   0.0   0:00.01 migration/0                                                                                                                                                         
20 (C):      14 root     -51   0       0      0      0 S   0.0   0.0   0:00.00 idle_inject/0                                                                                                                                                       
21 (C):      16 root      20   0       0      0      0 S   0.0   0.0   0:00.00 cpuhp/0                                                                                                                                                             
22 (C):      17 root      20   0       0      0      0 S   0.0   0.0   0:00.00 cpuhp/1                                                                                                                                                             
23 (C):      18 root     -51   0       0      0      0 S   0.0   0.0   0:00.00 idle_inject/1                                                                                                                                                       
24 (C):      19 root      rt   0       0      0      0 S   0.0   0.0   0:00.35 migration/1                                                                                                                                                         
25 (C):      20 root      -2   0       0      0      0 S   0.0   0.0   0:00.00 rcuc/1                                                                                                                                                              
26 (C):      21 root      20   0       0      0      0 S   0.0   0.0   0:00.49 ksoftirqd/1                                                                                                                                                         
27 (C):      23 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kworker/1:0H-kblockd                                                                                                                                                
28 (C):      24 root      20   0       0      0      0 S   0.0   0.0   0:00.00 cpuhp/2                                                                                                                                                             
29 (C):      25 root     -51   0       0      0      0 S   0.0   0.0   0:00.00 idle_inject/2                                                                                                                                                       
30 (C):      26 root      rt   0       0      0      0 S   0.0   0.0   0:00.39 migration/2                                                                                                                                                         
31 (C):      27 root      -2   0       0      0      0 S   0.0   0.0   0:00.00 rcuc/2                                                                                                                                                              
32 (C):      28 root      20   0       0      0      0 S   0.0   0.0   0:00.99 ksoftirqd/2                                                                                                                                                         
33 (C):      30 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kworker/2:0H-kblockd                                                                                                                                                
34 (C):      31 root      20   0       0      0      0 S   0.0   0.0   0:00.00 cpuhp/3                                                                                                                                                             
35 (C):      32 root     -51   0       0      0      0 S   0.0   0.0   0:00.00 idle_inject/3                                                                                                                                                       
36 (C):      33 root      rt   0       0      0      0 S   0.0   0.0   0:00.43 migration/3                                                                                                                                                         
37 (C):      34 root      -2   0       0      0      0 S   0.0   0.0   0:00.00 rcuc/3                                                                                                                                                              
38 (C):      35 root      20   0       0      0      0 S   0.0   0.0   0:00.90 ksoftirqd/3                                                                                                                                                         
39 (C):      37 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kworker/3:0H-kblockd                                                                                                                                                
40 (C):      38 root      20   0       0      0      0 S   0.0   0.0   0:00.00 kdevtmpfs                                                                                                                                                           
41 (C):      39 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 netns                                                                                                                                                               
42 (C):      40 root      20   0       0      0      0 S   0.0   0.0   0:00.00 rcu_tasks_kthre                                                                                                                                                     
43 (C):      41 root      20   0       0      0      0 S   0.0   0.0   0:00.00 kauditd                                                                                                                                                             
44 (C):      44 root      20   0       0      0      0 S   0.0   0.0   0:00.00 khungtaskd                                                                                                                                                          
45 (C):      45 root      20   0       0      0      0 S   0.0   0.0   0:00.00 oom_reaper                                                                                                                                                          
46 (C):      46 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 writeback                                                                                                                                                           
47 (C):      47 root      20   0       0      0      0 S   0.0   0.0   0:00.00 kcompactd0                                                                                                                                                          
48 (C):      48 root      25   5       0      0      0 S   0.0   0.0   0:00.00 ksmd                                                                                                                                                                
49 (C):      49 root      39  19       0      0      0 S   0.0   0.0   0:00.00 khugepaged                                                                                                                                                          
50 (C):     137 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kintegrityd                                                                                                                                                         
51 (C):     138 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kblockd                                                                                                                                                             
52 (C):     139 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 blkcg_punt_bio                                                                                                                                                      
53 (C):     140 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 ata_sff                                                                                                                                                             
54 (C):     141 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 edac-poller                                                                                                                                                         
55 (C): ⋊> ~/c/zellij on fix-top ⨯                                                                                                                                                                                                         13:00:53

