zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__unwrap_wide_characters_on_size_change.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): ｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅ
01 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
02 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
03 (C): ｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏ
04 (C): ＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨ
05 (C): ｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅ
06 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
07 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
08 (C): ｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏ
09 (C): ＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨ
10 (C): ｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅ
11 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
12 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
13 (C): ｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏ
14 (C): ＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨＨ
15 (C): ｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅｅ
16 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
17 (C): ｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌｌ
18 (C): ｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏｏ
19 (C): 
20 (C): 

