zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vim_ctrl_d.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C):   3 line14                                                                                                          
01 (C):   2 line15                                                                                                          
02 (C):   1 line16                                                                                                          
03 (C): 17  line17                                                                                                          
04 (C):   1 line18                                                                                                          
05 (C):   2 line19                                                                                                          
06 (C):   3 line20                                                                                                          
07 (C):   4 line21                                                                                                          
08 (C):   5 line22                                                                                                          
09 (C):   6 line23                                                                                                          
10 (C):   7 line24                                                                                                          
11 (C):   8 line25                                                                                                          
12 (C):   9 line26                                                                                                          
13 (C):  10 line27                                                                                                          
14 (C):  11 line28                                                                                                          
15 (C):  12 line29                                                                                                          
16 (C):  13 line30                                                                                                          
17 (C):  14 line31                                                                                                          
18 (C):  15 line32                                                                                                          
19 (C):  16 line33                                                                                                          
20 (C):  17 line34                                                                                                          
21 (C):  18 line35                                                                                                          
22 (C):  19 line36                                                                                                          
23 (C):  20 line37                                                                                                          
24 (C):  21 line38                                                                                                          
25 (C):  22 line39                                                                                                          
26 (C):  NORMAL  testfile.rs                                                              unix | utf-8 | rust   40%   17:1  
27 (C):                                                                                                                     

