zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vim_ctrl_u.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C):  22 line4                                                                                                           
01 (C):  21 line5                                                                                                           
02 (C):  20 line6                                                                                                           
03 (C):  19 line7                                                                                                           
04 (C):  18 line8                                                                                                           
05 (C):  17 line9                                                                                                           
06 (C):  16 line10                                                                                                          
07 (C):  15 line11                                                                                                          
08 (C):  14 line12                                                                                                          
09 (C):  13 line13                                                                                                          
10 (C):  12 line14                                                                                                          
11 (C):  11 line15                                                                                                          
12 (C):  10 line16                                                                                                          
13 (C):   9 line17                                                                                                          
14 (C):   8 line18                                                                                                          
15 (C):   7 line19                                                                                                          
16 (C):   6 line20                                                                                                          
17 (C):   5 line21                                                                                                          
18 (C):   4 line22                                                                                                          
19 (C):   3 line23                                                                                                          
20 (C):   2 line24                                                                                                          
21 (C):   1 line25                                                                                                          
22 (C): 26  line26                                                                                                          
23 (C):   1 line27                                                                                                          
24 (C):   2 line28                                                                                                          
25 (C):   3 line29                                                                                                          
26 (C):  NORMAL  testfile.rs                                                              unix | utf-8 | rust   61%   26:1  
27 (C):                                                                                                                     

