zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vim_overwrite.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): 1                                                                                                                   
01 (C):   1 line 1                                                                                                          
02 (C):   2 line 2                                                                                                          
03 (C):   3 line 3                                                                                                          
04 (C):   4 line 4                                                                                                          
05 (C):   5 line 5                                                                                                          
06 (C):   6 line 6                                                                                                          
07 (C):   7 line 7                                                                                                          
08 (C):   8 line 8                                                                                                          
09 (C):   9 line 9                                                                                                          
10 (C):  10 line 10                                                                                                         
11 (C):  11 line 11                                                                                                         
12 (C):  12 line 12                                                                                                         
13 (C):  13 line 13                                                                                                         
14 (C):  14 line 14                                                                                                         
15 (C):  15 line 15                                                                                                         
16 (C):  16 line 16                                                                                                         
17 (C):  17 line 17                                                                                                         
18 (C):  18 line 18                                                                                                         
19 (C):  19 line 19                                                                                                         
20 (C):  20 line 20                                                                                                         
21 (C):  21 line 21                                                                                                         
22 (C):  22 line 22                                                                                                         
23 (C):  23 line 23                                                                                                         
24 (C):  24 line 24                                                                                                         
25 (C):  25 line 25                                                                                                         
26 (C):  NORMAL  some-file                                                               unix | utf-8 | no ft    1%    1:1  
27 (C):                                                                                                                     

